--- a/src/global.scss
+++ b/src/global.scss
@@ -4,6 +4,9 @@ $yellow: #F9C22B;
 $green: #91DB69;
 $darkGreen: #1EBC73;
 $purple: #A884F3;
+$red: #EA4F36;
+$pink: #F68181;
+$orange: #F79617;
 
 
 $darkBlue: #323353;
