--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -10,53 +10,15 @@
     justify-content: center;
     flex-direction: row;
 
-    .circle1 {
-        filter: blur(1px);
-        width: 200px;
-        height: 200px;
-        transform: translate(350%, -100%);
-        background-color: $yellow;
-        opacity: 0.15;
+    .cover {
         position: absolute;
-        z-index: 0;
-        border-radius: 50%;
-        border: none;
-    }
-    .circle2 {
-        filter: blur(1px);
-        width: 150px;
-        height: 150px;
-        transform: translate(-500%, -100%);
-        background-color: $green;
-        opacity: 0.15;
-        position: absolute;
-        z-index: 0;
-        border-radius: 50%;
-        border: none;
-    }
-    .circle3 {
-        filter: blur(1px);
-        width: 120px;
-        height: 120px;
-        transform: translate(-100%, 100%);
-        background-color: $blue;
-        opacity: 0.15;
-        position: absolute;
-        z-index: 0;
-        border-radius: 50%;
-        border: none;
-    }
-    .circle4 {
-        filter: blur(1px);
-        width: 100px;
-        height: 100px;
-        transform: translate(200%, 8%);
-        background-color: $purple;
-        opacity: 0.15;
-        position: absolute;
-        z-index: 0;
-        border-radius: 50%;
-        border: none;
+        height: 100%;
+        width: 100%;
+        background-image: url("../../dots.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position-x: center;
+        background-position-y: top;
     }
 
     .container {
@@ -226,6 +188,10 @@
 
                 .imageContainer {
                     height: 50px;
+                    width: 50px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
 
                     img {
                         height: 40px;
