--- a/src/components/productDropDown/productDropDown.scss
+++ b/src/components/productDropDown/productDropDown.scss
@@ -19,6 +19,11 @@
         transition: all .5s ease;
         overflow-x: unset;
 
+        @media screen and (max-width: map-get($breakpoint, xxlarge)) 
+        {
+            width: 90%;
+        }
+
         &.active {
             top: 80px;
             opacity: 1;
