changed info bg image.

--- a/src/components/info/info.scss
+++ b/src/components/info/info.scss
@@ -64,11 +64,11 @@
             position: absolute;
             height: 100%;
             width: 100%;
-            background-image: url("../../earth.jpg");
+            background-image: url("../../bubbles.jpg");
             background-repeat: no-repeat;
             background-size: cover;
             background-position-x: center;
-            background-position-y: top;
+            background-position-y: 60%;
         }
 
         .cover {
