--- a/src/components/productDropDown/productDropDown.scss
+++ b/src/components/productDropDown/productDropDown.scss
@@ -16,7 +16,7 @@
         backdrop-filter: blur(6px);
         border-radius: 25px;
         opacity: 0;
-        transition: all .5s ease;
+        transition: all .5s ease-in-out;
         overflow-x: unset;
 
         @media screen and (max-width: map-get($breakpoint, xxlarge)) 
